--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>IDK</title>
 </head>
-<body>
+<body style="background-color: color">
 
 <h1>Taco page</h1>
 <p>My first paragraph.</p>
