--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 
   
   <iframe src="https://www.youtube.com/watch?v=vZariS25PF8"></iframe>
+<a href="https://my.minecraft.net/store/minecraft/" class="btn btn-primary btn-xl btn-vertical-stack" data-bi-id="n1c1c1c1c1c1c1c1c2c1m1r1a3" data-bi-bhvr="PARTNERREFERRAL" data-bi-prtnm="minecraft" data-bi-type="text"> <span class="grow"></span> Buy Minecraft <span class="text-small mb-2"> Java Edition (PC &amp; MAC) - <span class="buy-minecraft-price">CA$35.00</span>
+		</span>
+		</a>
+  
 </body>
 </html>
