--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
 <html>
 <head>
 <title>IDK</title>
-</head>
-<body 
 
+<script>
+	function pops(){
+		alert("go away!");
+	}
+</script>
+<style>
+.button {
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+</style>
+</head>
+<body> 
+
+<button class="button">Click Me</button>
+<button class="button" onclick="pops()">Click Me</button>	
 <h1>Taco page</h1>
 <p>My first Taco.</p>
 
@@ -12,9 +42,6 @@
 
   
   <iframe src="https://www.youtube.com/watch?v=vZariS25PF8"></iframe>
-<a href="https://my.minecraft.net/store/minecraft/" class="btn btn-primary btn-xl btn-vertical-stack" data-bi-id="n1c1c1c1c1c1c1c1c2c1m1r1a3" data-bi-bhvr="PARTNERREFERRAL" data-bi-prtnm="minecraft" data-bi-type="text"> <span class="grow"></span> Buy Minecraft <span class="text-small mb-2"> Java Edition (PC &amp; MAC) - <span class="buy-minecraft-price">CA$35.00</span>
-		</span>
-		</a>
-  
+
 </body>
 </html>
