--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   cursor: pointer;
   outline: none;
   color: #fff;
-  background-color: #4CAF50;
+  background-color: #641E16 ;
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px #999;
