--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   box-shadow: 0 9px #999;
 }
 
-.button:hover {background-color: #3e8e41}
+.button:hover {background-color: #641E16 }
 
 .button:active {
-  background-color: #3e8e41;
+  background-color: #641E16 ;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
