--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   cursor: pointer;
   outline: none;
   color: #fff;
-  background-color: #641E16 ;
+  background-color: #F8BBD0  ;
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px #999;
 }
 
-.button:hover {background-color: #641E16 }
+.button:hover {background-color: #F8BBD0  }
 
 .button:active {
-  background-color: #641E16 ;
+  background-color: #F8BBD0  ;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
