--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<style>
@@ -15,7 +15,7 @@ body {
 </script>
 <style>
 .button {
-  padding: 100px 25px;
+  padding: 50px 25px;
   font-size: 24px;
   text-align: center;
   cursor: pointer;
