--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<p><bc>welcome to my taco page</bc>
+	<font color="red"><bc>welcome to my taco page</bc></font>
 <title>IDK</title>
 
 <script>
