--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>IDK</title>
-	<h1><font color="red"><bc>welcome to my taco page</bc></font></h1>
+	<h1><font color="red"><b>welcome to my taco page</b></font></h1>
 <hr/>
 <script>
 	function pops(){
