--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>IDK</title>
-	<center><h1><font color="red"><b>welcome to my taco page</b></font></h1></center>
+	<center><h1 color="red"><b>welcome to my taco page</b></h1></center>
 <hr/>
 <script>
 	function pops(){
