--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<background =color"pink>
 	<title>IDK</title>
 	<center><h1 color="red"><b>welcome to my taco page</b></h1></center>
 <hr/>
