--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <background =color"pink>
 	<title>IDK</title>
-	<center><h1 color="red"><b>welcome to my taco page</b></h1></center>
+		   <center><h1><style color="red"><b>welcome to my taco page</b></style></h1></center>
 <hr/>
 <script>
 	function pops(){
