--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<background =color"pink>
+<body style="background =color"pink>
 	<title>IDK</title>
 		   <center><h1><style color="red"><b>welcome to my taco page</b></style></h1></center>
 <hr/>
