--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <body style="background =color"pink>
 	<title>IDK</title>
-		   <center><h1><style color="red"><b>welcome to my taco page</b></style></h1></center>
+		   <center><h1><font color="red"><b>welcome to my taco page</b></font></h1></center>
 <hr/>
 <script>
 	function pops(){
