--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	}
 </script>
 <style>
-.button {
+<center>.button {
   padding: 2px 25px;
   font-size: 24px;
   text-align: center;
@@ -29,7 +29,7 @@
 .button:active {
   background-color: #F8BBD0  ;
   box-shadow: 0 5px #666;
-  transform: translateY(4px);
+  transform: translateY(4px); </center>
 }
 </style>
 </head>
