--- a/index.html
+++ b/index.html
@@ -1,42 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-<body style="background =color"pink>
-	<title>IDK</title>
-		   <center><h1><font color="red"><b>welcome to my taco page</b></font></h1></center>
-<hr/>
-<script>
-	function pops(){
-		alert("DO YOU WANT A FREE TACO!");
-	}
-</script>
-<style>
-<center>.button {
-  padding: 2px 25px;
-  font-size: 24px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: #fff;
-  background-color: #F8BBD0  ;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
-}
 
-.button:hover {background-color: #F8BBD0  }
+<title>TACO PAGE</title>
+<html> 
+	<body>
+		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
+<hr/><hr/>
+	
+	</body>
 
-.button:active {
-  background-color: #F8BBD0  ;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px); </center>
-}
-</style>
-</head>
-<body> 
-
-<button class="button" onclick="pops()">Click Me</button>	
-  
-
-</body>
 </html>
