--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <title>TACO PAGE</title>
 <html> 
-	<body style="background-color:pink;">
+	<body style="background-color:lightgreen;">
 		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
 <hr/><hr/>
 	
