--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<body style="background-color:green;">
 		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
 <hr/><hr/>
-		<a href="https://www.youtube.com/watch?v=Os7CAOoEvvc">4 TYPES OF TACOS</a>
+		<a href="https://www.youtube.com/watch?v=Os7CAOoEvvc"><h3>4 TYPES OF TACOS</h3></a>
 	</body>
 
 </html>
