--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<body style="background-color:lightgreen;">
 		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
 <hr/><hr/>
-		<a href="https://www.youtube.com/watch?v=Os7CAOoEvvc" target="_blank"><h2>4 TYPES OF TACOS</h2></a>
+		<a href="https://www.youtube.com/watch?v=Os7CAOoEvvc" target="_blank"><h2>4 TYPES OF <b><i>TACOS</b></i></h2></a>
 	</body>
 
 </html>
