--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
 <hr/><hr/>
 		<a href="https://www.youtube.com/watch?v=Os7CAOoEvvc" target="_blank"><h2>4 TYPES OF <big><i>TACOS</big></i></h2></a>
+		<img src="taco.jpg" alt="AWESOME TACO />
 	</body>
 
 </html>
