--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
 		<div class='nav_bar'>
 			<ul>
-				<li><a href='index.html'>HOME</a></li>
-				<li><a href='about.html'>ABOUT</a></li>
-				<li><a href='assignments.html'>ASSIGNMENTS</a></li>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="assignments.html">ASSIGNMENTS</a></li>
 			</ul>
 <hr/><hr/>
 		<a href="https://www.youtube.com/watch?v=Os7CAOoEvvc" target="_blank"><h2>4 TYPES OF <big><i>TACOS</big></i></h2></a>
