--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html> 
 <title>TACO PAGE</title>
+	<link rel="stylesheet' href="css/style.css"
 
 	<body style="background-color:lightgreen;">
 		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
