--- a/about.html
+++ b/about.html
@@ -1,11 +1,14 @@
 <!DOCTYPE>
 <html>
-  <body>
-  <h1>ABOUT MY (non-exsistant)SKILLS</h1>
-  </body
-
-
-
+  <body<body style="background-color:lightgreen;">
+		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
+		<div class='nav_bar'>
+			<ul>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="assignments.html">ASSIGNMENTS</a></li>
+			</ul>
+<hr/><hr/>
 
 
 
