--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
 		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
 		<div class='nav_bar'>
 			<ul>
-				<li><a href="index.html">HOME</a></li>
+				<center><li><a href="index.html">HOME</a></li>
 				<li><a href="about.html">ABOUT</a></li>
-				<li><a href="assignments.html">ASSIGNMENTS</a></li>
+					<li><a href="assignments.html">ASSIGNMENTS</a></li></center>
 			</ul>
 <hr/><hr/>
 
