--- a/about.html
+++ b/about.html
@@ -1,13 +1,15 @@
 <!DOCTYPE>
 <html>
-  <body<body style="background-color:lightgreen;">
-		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
+<title>TACO PAGE</title>
+	<body style="background-color:lightgreen;">
+		<center><h1><b><font color="red">MY <small>(non-existnant)</small> SKILLS</font></b></h1></center>
 		<div class='nav_bar'>
 			<ul>
-				<center><li><a href="index.html">HOME</a></li>
+				<li><a href="index.html">HOME</a></li>
 				<li><a href="about.html">ABOUT</a></li>
-					<li><a href="assignments.html">ASSIGNMENTS</a></li></center>
+				<li><a href="assignments.html">ASSIGNMENTS</a></li>
 			</ul>
+<hr/><hr/>
 <hr/><hr/>
 
 
