--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 <title>TACO PAGE</title>
-	<body style="background-color:lightgreen;">
+	<body style="background-color:lightred;">
 		<center><h1><b><font color="red">MY <small>(non-existnant)</small> SKILLS</font></b></h1></center>
 		<div class='nav_bar'>
 			<ul>
