--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 				<li><a href="about.html">ABOUT</a></li>
 				<li><a href="assignments.html">ASSIGNMENTS</a></li>
 			</ul>
+		</div>
 <hr/><hr/>
 
 
