--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 				<li><a href="about.html">ABOUT</a></li>
 				<li><a href="assignments.html">ASSIGNMENTS</a></li>
 			</ul>
+		</div>
 <hr/><hr/>
 		<a href="https://www.youtube.com/watch?v=Os7CAOoEvvc" target="_blank"><h2>4 TYPES OF <big><i>TACOS</big></i></h2></a>
-		<img src="taco.jpg" alt="AWESOME TACO />
+	
 	</body>
 
 </html>
