--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <title>TACO PAGE</title>
 	<body style="background-color:lightred;">
-		<center><h1><b><font color="red">MY <small>(non-existnant)</small> SKILLS</font></b></h1></center>
+		<center><h1><b><font color="black">MY <small>(non-existnant)</small> SKILLS</font></b></h1></center>
 		<div class='nav_bar'>
 			<ul>
 				<li><a href="index.html">HOME</a></li>
