--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html> 
 <title>TACO PAGE</title>
+	<link href="style.css" type="text/css" rel="stylesheet">
 	<body style="background-color:lightgreen;">
 		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
 		<div class='nav_bar'>
@@ -11,7 +12,7 @@
 			</ul>
 		</div>
 <hr/><hr/>
-		<a href="https://www.youtube.com/watch?v=Os7CAOoEvvc" target="_blank"><h2>4 TYPES OF <big><i>TACOS</big></i></h2></a>
+		<button><a href="https://www.youtube.com/watch?v=Os7CAOoEvvc">4TACOS</a></button>
 	
 	</body>
 
