--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <title>TACO PAGE</title>
 	<link href="style.css" type="text/css" rel="stylesheet">
-	<body style="background-color:lightgreen;">
+	<body style="background-color:#2c3e50;">
 		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
 		<div class='nav_bar'>
 			<ul>
@@ -12,7 +12,7 @@
 			</ul>
 		</div>
 <hr/><hr/>
-		<button><a href="https://www.youtube.com/watch?v=Os7CAOoEvvc">4TACOS</a></button>
+		<button id="four_tacos"><a href="https://www.youtube.com/watch?v=Os7CAOoEvvc">4TACOS</a></button>
 	
 	</body>
 
