--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
 <title>TACO PAGE</title>
-	<link href="style.css" type="text/css" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 	<body style="background-color:#576574;">
 		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
 		<div class='nav_bar'>
