--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>TACO PAGE</title>
 	<link href="style.css" rel="stylesheet">
 	<body style="background-color:#576574;">
-		<center><h1><b><font color="red">THIS IS A TACO PAGE</font></b></h1></center>
+		<center><h1><b><font color="#C1A6D6">THIS IS A TACO PAGE</font></b></h1></center>
 		<div class='nav_bar'>
 			<ul>
 				<li><a href="index.html">HOME</a></li>
