--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 	<link href="style.css" rel="stylesheet">
 	<body style="background-color:#576574;">
 		<center><h1><b><font color="#C1A6D6">THIS IS A TACO PAGE</font></b></h1></center>
-		<div class='nav_bar'>
-			<ul>
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="about.html">ABOUT</a></li>
-				<li><a href="assignments.html">ASSIGNMENTS</a></li>
-			</ul>
+		<div class="container">
+				<button class="index.html">HOME</button>
+				<button class="about.html">about me</button>
+				<button class="assignments.html">projects</button>
 		</div>
 <hr/><hr/>
 		<div>
