--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html> 
 <title>TACO PAGE</title>
 	<link href="style.css" rel="stylesheet">
-	<body style="background-color:#576574;">
-		<center><h1><b><font color="#C1A6D6">THIS IS A TACO PAGE</font></b></h1></center>
+	<body style="background-color:#420101;">
+		<center><h1><b><font color="#E6C611 ">THIS IS A TACO PAGE</font></b></h1></center>
 		<div class="container">
-				<button class="index.html">HOME</button>
-				<button class="about.html">about me</button>
-				<button class="assignments.html">projects</button>
+				<button class="btn btn1">HOME</button>
+				<button class="btn btn2">ABOUT ME</button>
+				<button class="btn btn3">PROJECTS</button>
 		</div>
 <hr/><hr/>
-		<div>
-		<button id="four_tacos"><a href="https://www.youtube.com/watch?v=Os7CAOoEvvc">4TACOS</a></button>
-		</div>
-	
+
 	</body>
 
 </html>
