--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 				<button class="btn btn1">HOME</button>
 				<button class="btn btn2">ABOUT ME</button>
 				<button class="btn btn3">PROJECTS</button>
+      <button class="btn btn4">TACOS</button>
 		</div>
 <hr/><hr/>
 
