--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<body style="background-color:#420101;">
 		<center><h1><b><font color="#E6C611 ">THIS IS A TACO PAGE</font></b></h1></center>
 		<div class="container">
-				<button class="btn btn1">HOME</button>
-				<button class="btn btn2">ABOUT ME</button>
-				<button class="btn btn3">PROJECTS</button>
-      <button class="btn btn4">TACOS</button>
+				<button class="btn btn1"><a href="index.html">HOME</button>
+				<button class="btn btn2"><a href="about.html">ABOUT ME</button>
+				<button class="btn btn3"><a href="projects.html">PROJECTS</button>
+      				<button class="btn btn4"><a href="https://www.youtube.com/watch?v=Os7CAOoEvvc">TACOS</button>
 		</div>
 <hr/><hr/>
 
