--- a/about.html
+++ b/about.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html> 
 <title>TACO PAGE</title>
-	<body style="background-color:lightred;">
-		<center><h1><b><font color="black">MY <small>(non-existnant)</small> SKILLS</font></b></h1></center>
-		<div class='nav_bar'>
-			<ul>
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="about.html">ABOUT</a></li>
-				<li><a href="assignments.html">ASSIGNMENTS</a></li>
-			</ul>
+	<link href="style.css" rel="stylesheet">
+	<body style="background-color:#19A72A ;">
+		<center><h1><b><font color="#E6C611 ">ABOUT MY<small>(non-existnant)</small> SKILLS</font></b></h1></center>
+		<div class="container">
+				<button class="btn btn1"><a href="index.html">HOME</button>
+				<button class="btn btn2"><a href="about.html">ABOUT ME</button>
+				<button class="btn btn3"><a href="projects.html">PROJECTS</button>
+      				<button class="btn btn4"><a href="https://www.youtube.com/watch?v=Os7CAOoEvvc">TACOS</button>
 		</div>
 <hr/><hr/>
 
-
+	</body>
 
 </html>
