--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html> 
+<title>TACO PAGE</title>
+	<link href="style.css" rel="stylesheet">
+	<body style="background-color:#4C19A7 ;">
+		<center><h1><b><font color="#E6C611 ">PROJECTS</font></b></h1></center>
+		<div class="container">
+				<button class="btn btn1"><a href="index.html">HOME</button>
+				<button class="btn btn2"><a href="about.html">ABOUT ME</button>
+				<button class="btn btn3"><a href="projects.html">PROJECTS</button>
+      				<button class="btn btn4"><a href="https://www.youtube.com/watch?v=Os7CAOoEvvc">TACOS</button>
+		</div>
+<hr/><hr/>
 
+	</body>
+
+</html>
