--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <title>TACO PAGE</title>
 	<link href="style.css" rel="stylesheet">
 	<body style="background-color:#19A72A ;">
-		<center><h1><b><font color="#E6C611 ">ABOUT MY<small>(non-existnant)</small> SKILLS</font></b></h1></center>
+		<center><h1><b><font color="#E6C611 ">ABOUT MY<small>(non-existant)</small> SKILLS</font></b></h1></center>
 		<div class="container">
 				<button class="btn btn1"><a href="index.html">HOME</button>
 				<button class="btn btn2"><a href="about.html">ABOUT ME</button>
