--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <title>TACO PAGE</title>
 	<link href="style.css" rel="stylesheet">
-	<body style="background-color:#420101;">
+	<body style="background-color:#ff6b6b;">
 		<center><h1><b><font color="#E6C611 ">THIS IS A TACO PAGE</font></b></h1></center>
 		<div class="container">
 				<button class="btn btn1"><a href="index.html">HOME</button>
