--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html> 
 <title>TACO PAGE</title>
 	<link href="style.css" rel="stylesheet">
-	<body style="background-color:#ff9ff3;">
+	<body style="background-color:#f368e0;">
 		<center><h1><b><font color="#E6C611 ">PROJECTS</font></b></h1></center>
 		<div class="container">
 				<button class="btn btn1"><a href="index.html">HOME</button>
