--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,14 @@
       				<button class="btn btn4"><a href="https://www.youtube.com/watch?v=Os7CAOoEvvc">TACOS</button>
 		</div>
 <hr/><hr/>
+					<button>Project 1</button>
+					<button>Project 2</button>
+					<button>Project 3</button>
+					<button>Project 4</button>
+					<button>Project 5</button>
+					<button>Project 6</button>
+					<button>Project 7</button>
+					<button>Project 8</button>
 
 	</body>
 
