--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <hr/><hr/>
 					<p>My name is Jade im 16 years old and attend Tlk secondsry school. I have little experiamce in programing.
 				as a child i wound make little games on Notepad++ for my mother but stopped  afew years ago. When i was in grade 7 
-				i was in a Jr lego robotics leage and was a main programer.
+						i was in a Jr lego robotics leage and was a main programer.</p>
 
 	</body>
 
